Correct spelling of description throughout
Sadly, this requires a schema change.

--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
             </table>
         </div>
         <div class="body">
-            <div id='details' ng-bind-html="discription">
+            <div id='details' ng-bind-html="description">
             </div>
             <div id='signup'>
                 <form ng-submit="eMeat.addAttendee()">
