Add running total
tack tack tack

--- a/html/index.html
+++ b/html/index.html
@@ -52,6 +52,12 @@
                                     <td>{{attendee.pluss}}</td>
                                 </tr>
                             </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td>Total</td>
+                                    <td>{{eMeat.attendee_count}}</td>
+                                </tr>
+                            </tfoot>
                         </table>
                     </div>
                 </div>
